tests/baselines/reference/classOverloadForFunction.errors.txt
tests/cases/compiler/classOverloadForFunction.ts(1,7): error TS2300: Duplicate identifier 'foo'.
tests/cases/compiler/classOverloadForFunction.ts(2,10): error TS2300: Duplicate identifier 'foo'.


==== tests/cases/compiler/classOverloadForFunction.ts (2 errors) ====
    class foo { };
          ~~~
!!! error TS2300: Duplicate identifier 'foo'.
!!! related TS6203 tests/cases/compiler/classOverloadForFunction.ts:2:10: 'foo' was also declared here.
    function foo() {}
             ~~~
!!! error TS2300: Duplicate identifier 'foo'.
!!! related TS6203 tests/cases/compiler/classOverloadForFunction.ts:1:7: 'foo' was also declared here.
    